# PyOptBook_linopy

./: .gitignore  README.md  pyproject.toml
2.tutorial/: baseline_expected.json  baseline_pulp.json  build_linopy_notebook.py  run_baseline_pulp.py  tutorial_linopy.ipynb  verify_linopy.py
3.school/: baseline_pulp.json  run_baseline_pulp.py  school_linopy.ipynb  verify_linopy.py
4.coupon/: baseline_pulp.json  coupon_linopy.ipynb  run_baseline_pulp.py  verify_linopy.py
5.routing/: run_baseline_pulp.py  verify_linopy.py
6.api/: baseline_pulp.json  problem_linopy.py  run_baseline_pulp.py  verify_linopy.py
7.recommendation/: baseline_cvxopt.json  data_recommendation.json  run_baseline_cvxopt.py  verify_linopy.py
